--- a/views/index.hbs
+++ b/views/index.hbs
@@ -78,8 +78,8 @@
 
         <label for="check-in">CHECK-IN</label><br><br>
         <input id="check-in" name="check-in" type="date" tabindex="3" required/><br><br>
-        <label for="check-in">CHECK-OUT</label><br><br>
-        <input id="check-in" name="check-in" type="date" tabindex="3" required/><br><br>
+        <label for="check-out">CHECK-OUT</label><br><br>
+        <input id="check-out" name="check-out" type="date" tabindex="3" required/><br><br>
 
         <label for="guests">GUESTS</label><br><br>
         <input list="guest-number" name="guests" id="guests" required>
